Fix unshared project warning colors in dark mode

--- a/src/playground/interface.css
+++ b/src/playground/interface.css
@@ -112,6 +112,6 @@ a {
 }
 
 .unshared-update {
-    border-color: #ffb9b9;
-    background-color: #ffdbdb;
+    border-color: #ff52526e;
+    background-color: #ff525240;
 }
